Improve look of grade arrows

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
             <style id="zoomStyle"></style>
             <defs>
                 <g id="gradeArrow" transform="scale(10)" viewBox="0 0 10 10" refX="5" refY="5">
-                    <path d="M 0 -5 L 3 4 L -3 4 z"/>
+                    <path d="M 0 -7 L 3.8 4 L -3.8 4 z" fill="black"/>
+                    <path d="M 0 -5 L 3 4 L 0 5 L -3 4 z"/>
                 </g>
                 <g id="speedSign" transform="scale(15)" viewBox="0 0 10 10" refX="5" refY="5" style="fill:#fff; stroke:#e73819">
                     <circle cx="0" cy="0" r="3"/>
