--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
         </div>
     </div>
     <div id="footer" class="orange">
+        <div id="zoomLevelDisplay"></div>
         Map v0.2 alpha
         <br>
         Updated for Game Build 99.3
