Move map markers into separate svg
And improve navigation performance

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="mapContainer">
+        <div id="mapNavigator">
         <svg id="map" xmlns="http://www.w3.org/2000/svg" width="1000" height="1000" viewBox="0 0 10000 10000">
             <style>
                 .sign{
@@ -178,6 +179,9 @@
                 </g>
             </defs>
         </svg>
+        <svg id="mapMarkers" xmlns="http://www.w3.org/2000/svg" width="1000" height="1000" viewBox="0 0 10000 10000">
+        </svg>
+        </div>
     </div>
     <div id="topleft">
         <div id="headerbar" class="panel orange">
