--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <title>Derail Valley Community Map</title>
+    <meta property="og:title" content="Derail Valley Community Map">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pyronicampt.github.io/DV-Community-Map/">
+    <meta property="og:image" content="https://pyronicampt.github.io/DV-Community-Map/opengraph.png">
+    <meta property="og:description" content="Web-based map of Derail Valley">
     <script type="module" src="index.js"></script>
     <script type="module" src="legend.js"></script>
   </head>
