Update legend blurb

--- a/index.html
+++ b/index.html
@@ -227,7 +227,10 @@
             <div id="legendContents">
                 <div class="panel">
                     Welcome to the WIP community map of <a href="https://www.derailvalley.com/" style="white-space:nowrap;">Derail Valley</a>, a resource for documenting and displaying all tracks and points of interest.
-                    <hr>
+                    <p>
+                        Problems? Suggestions? Head over to <a href="https://github.com/PyroNicampt/DV-Community-Map/issues">the issue tracker</a> and see if it's already there, or submit if not. Or contribute a fix yourself if you really want!
+                    </p>
+                    <hr style="margin-top: 5px;">
                     Hover over tracks and objects for detailed information.
                 </div>
                 <div class="panel">
