Add github update indicator

--- a/index.html
+++ b/index.html
@@ -230,8 +230,10 @@
                     <p>
                         Problems? Suggestions? Head over to <a href="https://github.com/PyroNicampt/DV-Community-Map/issues">the issue tracker</a> and see if it's already there, or submit if not. Or contribute a fix yourself if you really want!
                     </p>
-                    <hr style="margin-top: 5px;">
+                    <hr style="margin: 5px 0;">
                     Hover over tracks and objects for detailed information.
+                    <hr style="margin: 5px 0;">
+                    Last Updated: <span id="lastUpdate"></span>
                 </div>
                 <div class="panel">
                     <h3>Key</h3>
