Add Track Colorization

--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
                     <h3>Key</h3>
                     <hr>
                     <div id="legendKey"></div>
+                    <hr>
+                    Track Colors:
+                    <div id="legendKeyColors"></div>
                 </div>
                 <div id="settingsPanel" class="panel">
                     <h3>Map Settings</h3>
