Add grade direction switching to map settings

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                     <path d="M 0 -7 L 3.8 4 L -3.8 4 z" fill="black"/>
                     <path d="M 0 -5 L 3 4 L 0 5 L -3 4 z"/>
                 </g>
+                <g id="gradeArrowDownhill" transform="rotate(180) scale(30)" viewBox="0 0 10 10" >
+                    <path d="M 0 -7 L 3.8 4 L -3.8 4 z" fill="black"/>
+                    <path d="M 0 -5 L 3 4 L 0 5 L -3 4 z"/>
+                    <path d="M 0 -1.9 1.91 3.83 H -1.9 z" fill="black"/>
+                    <path d="M 0 -0.3 1.5 4.3 h -3 z"/>
+                </g>
                 <g id="speedSign" transform="scale(15)" viewBox="0 0 10 10" style="fill:#fff; stroke:#e73819">
                     <circle cx="0" cy="0" r="3"/>
                 </g>
