Add yard signage

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     stroke-width: 6px;
                     paint-order: stroke fill;
                 }
+                .yardSignage{
+                    font: 200px "Noto Sans Mono";
+                    text-anchor: middle;
+                }
                 .rail{
                     fill: none;
                 }
