Force redraw on zoom to fix HW Accel blur

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div id="topleft">
         <div id="headerbar" class="panel orange">
             <div>
-                DV Community Map
+                <span id="redrawTrigger"></span>DV Community Map
             </div>
         </div>
         <div id="legend">
