Added zoom buttons for mobile friendly use, increased zoom speed to ease the feel of zooming in

--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@
         </svg>
         </div>
     </div>
+	
+	<div id="zoom-buttons">
+		<button id="zoom-in">+</button>
+		<button id="zoom-out">-</button>
+	</div>
+	
     <div id="stats" class="orange">
         <div id="zoomLevelDisplay"></div>
         Map v0.5 alpha
