Clean up styling and function of zoom buttons

--- a/index.html
+++ b/index.html
@@ -220,12 +220,11 @@
         </div>
     </div>
 	
-	<div id="zoom-buttons">
-		<button id="zoom-in">+</button>
-		<button id="zoom-out">-</button>
-	</div>
-	
     <div id="stats" class="orange">
+        <div id="navigationControls">
+            <button id="navZoomIn" class="panel orange">+</button>
+            <button id="navZoomOut" class="panel orange">-</button>
+        </div>
         <div id="zoomLevelDisplay"></div>
         Map v0.5 alpha
         <br>
@@ -269,7 +268,7 @@
                     <a href="https://derailvalley.wiki.gg/wiki/Derail_Valley_Wiki">DV Wiki</a>
                 </div>
             </div>
-            <div id="legendButton" class="panel orange"><svg style="transform:rotate(180deg) translateY(0px)" viewBox="0 0 32 32"><path fill="currentColor" d="M31 16 20 31l-16 0L15 16 4 1l16 0Z"/></svg></div>
+            <button id="legendButton" class="panel orange"><svg style="transform:rotate(180deg) translateY(0px)" viewBox="0 0 32 32"><path fill="currentColor" d="M31 16 20 31l-16 0L15 16 4 1l16 0Z"/></svg></button>
         </div>
     </div>
   </body>
