Add junction support

--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
                     <use href="#speedSign"></use>
                     <text class="signText" style="transform:translate(-35px, 20px)">12</text>
                 </g>
+                <g id="junctionSign" transform="scale(20)" viewBox="0 0 20 20">
+                    <g transform="translate(-10 -10)">
+                        <rect ry="1.347" y="0.539" x="5.003" height="18.922" width="9.994" style="stroke:#ebebeb;stroke-width:0.9"></rect>
+                        <rect ry="0.989" transform="rotate(22.53)" y="-3.763" x="12.079" height="18.335" width="1.979" style="fill:#ebebeb"></rect>
+                    </g>
+                </g>
                 <g id="mrk_office" transform="scale(20)" viewBox="0 0 20 20">
                     <circle r="10"></circle>
                     <path transform="translate(-10 -10)" d="M10 3.8l5.56 6.03h-1.66v5.2h-2.51v-3.93h-2.78v3.93h-2.51v-5.2h-1.66z" fill="#fff"></path>
