Add cursor coordinate display

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <button id="navZoomOut" class="panel orange">-</button>
         </div>
         <div id="zoomLevelDisplay"></div>
+        <div id="cursorCoordDisplay"></div>
         Map v0.6 alpha
         <br>
         Updated for Game Build 99.3
