Add link to official manual

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 <div class="panel">
                     <a href="https://github.com/PyroNicampt/DV-Community-Map">Source</a> &#8226;
                     <a href="https://github.com/PyroNicampt/DV-Community-Map/issues">Issue Tracker</a> &#8226;
-                    <a href="https://derailvalley.wiki.gg/wiki/Derail_Valley_Wiki">DV Wiki</a>
+                    <a href="https://derailvalley.wiki.gg/wiki/Derail_Valley_Wiki">DV Wiki</a> &#8226;
+                    <a href="https://wiki.derailvalley.com/wiki/Main_Page">Official Manual</a>
                 </div>
             </div>
             <button id="legendButton" class="panel orange"><svg style="transform:rotate(180deg) translateY(0px)" viewBox="0 0 32 32"><path fill="currentColor" d="M31 16 20 31l-16 0L15 16 4 1l16 0Z"/></svg></button>
