Add car rendering
Also split dynamic objects into a separate canvas for faster rendering

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div id="mapContainer">
-        <canvas id="mapCanvas" style="width:100%;height:100%"></canvas>
+        <canvas id="mapCanvas"></canvas>
+        <canvas id="dynCanvas"></canvas>
         <div id="tooltip" class="panel" style="display:none"></div>
     </div>
 	
