Save settings between sessions
Saves settings to cookies

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div id="zoomLevelDisplay"></div>
         <div id="cursorCoordDisplay"></div>
-        Map v0.6.3 alpha
+        Map v0.6.4 alpha
         <br>
         Updated for Game Build 99.5
         <br>
@@ -41,6 +41,12 @@
         </div>
         <div id="legend">
             <div id="legendContents">
+                <div class="panel">
+                    <a href="https://github.com/PyroNicampt/DV-Community-Map">Source</a> &#8226;
+                    <a href="https://github.com/PyroNicampt/DV-Community-Map/issues">Issue Tracker</a> &#8226;
+                    <a href="https://derailvalley.wiki.gg/wiki/Derail_Valley_Wiki">DV Wiki</a> &#8226;
+                    <a href="https://wiki.derailvalley.com/wiki/Main_Page">Official Manual</a>
+                </div>
                 <div class="panel">
                     Welcome to the WIP community map of <a href="https://www.derailvalley.com/" style="white-space:nowrap;">Derail Valley</a>, a resource for documenting and displaying all tracks and points of interest.
                     <p>
@@ -62,13 +68,8 @@
                 </div>
                 <div id="settingsPanel" class="panel">
                     <h3>Map Settings</h3>
+                    <div class="quiet" style="margin: 0 0 5px 0;font-size: 10px;">(Page uses local-only cookies to keep settings)</div>
                     <hr>
-                </div>
-                <div class="panel">
-                    <a href="https://github.com/PyroNicampt/DV-Community-Map">Source</a> &#8226;
-                    <a href="https://github.com/PyroNicampt/DV-Community-Map/issues">Issue Tracker</a> &#8226;
-                    <a href="https://derailvalley.wiki.gg/wiki/Derail_Valley_Wiki">DV Wiki</a> &#8226;
-                    <a href="https://wiki.derailvalley.com/wiki/Main_Page">Official Manual</a>
                 </div>
             </div>
             <button id="legendButton" class="panel orange"><svg style="transform:rotate(180deg) translateY(0px)" viewBox="0 0 32 32"><path fill="currentColor" d="M31 16 20 31l-16 0L15 16 4 1l16 0Z"/></svg></button>
