--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
         </div>
         <div id="legend">
             <div id="legendContents">
-                <div class="panel">
-                    <a href="https://github.com/PyroNicampt/DV-Community-Map">Source</a> &#8226;
-                    <a href="https://github.com/PyroNicampt/DV-Community-Map/issues">Issue Tracker</a> &#8226;
-                    <a href="https://derailvalley.wiki.gg/wiki/Derail_Valley_Wiki">DV Wiki</a> &#8226;
+                <div class="panel linkpanel">
+                    <a href="https://github.com/PyroNicampt/DV-Community-Map">Source</a>
+                    <a href="https://github.com/PyroNicampt/DV-Community-Map/issues">Issue Tracker</a>
+                    <a href="https://derailvalley.wiki.gg/wiki/Derail_Valley_Wiki">DV Wiki</a>
                     <a href="https://wiki.derailvalley.com/wiki/Main_Page">Official Manual</a>
+                    <a href="https://github.com/PyroNicampt/DV-Community-Map/releases">Location Mod</a>
                 </div>
                 <div class="panel">
                     Welcome to the WIP community map of <a href="https://www.derailvalley.com/" style="white-space:nowrap;">Derail Valley</a>, a resource for documenting and displaying all tracks and points of interest.
